--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=smtp.163.com
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=smtp用户名
+MAIL_PASSWORD=密码
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
@@ -37,3 +37,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+YI_MA_USERNAME = 易码用户名
+YI_MA_USERNAME = 易码密码
+YI_MA_TOKEN = 易码token
+INIVT_CODE = ccvt邀请码
+BAIDU_CLIENT_ID = 百度文字识别key
+BAIDU_CLIENT_SECRET = 百度文字识别secret
+MAIL_TO = 目标邮箱
+MAIL_FROM = 发送邮箱
