微信公众号+图灵聊天功能

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -46,3 +46,6 @@ BAIDU_CLIENT_ID = 百度文字识别key
 BAIDU_CLIENT_SECRET = 百度文字识别secret
 MAIL_TO = 目标邮箱
 MAIL_FROM = 发送邮箱
+WECHAT_ID = 微信公众号ID
+TULING_USER = 图灵用户接口
+TULING_USER_ID = 图灵用户ID
