--- a/laravel-admin-spider/composer.json
+++ b/laravel-admin-spider/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "^4.0",
+        "laravel-admin-spider/spider": "dev-master",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
@@ -56,5 +57,11 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "app/Admin/extensions/laravel-admin-spider/spider"
+        }
+    ]
 }
